<resources>
    <string name="app_name">Fitness_App</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_fitness_app">WELCOME TO FITNESS APP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="confirm">Confirm</string>
    <string name="password_at_least_5_characters">Password (at least 5 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email</string>
    <string name="d_o_b_dd_mm_yyyy">D.O.B (dd/mm/yyyy)</string>
    <string name="register">Register</string>

    <string name="name">Heart Rate</string>
    <string name="default_text">000</string>
    <string name="unit">bpm</string>
    <string name="details">details</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="facebook_app_id">1962502203769131</string>



</resources>
