<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_btn"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_indicator_prev"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="380dp"
        android:background="@color/rippelColor">

        <com.example.troyphattrinh.fitness_app.RingView
            android:id="@+id/ringview"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerInParent="true"/>

        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="85dp"
                    android:layout_height="130dp">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/default_text"
                        android:textSize="45sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <com.example.troyphattrinh.fitness_app.HeartbeatView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="75dp">
                    </com.example.troyphattrinh.fitness_app.HeartbeatView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/unit"
                        android:textSize="30sp"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="1dp"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/btnDetails"
        android:onClick="btnDetailsClick"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:text="@string/details"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/selector_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"/>

</LinearLayout>